--- a/src/MusicPlayer/ButtonsBox.module.css
+++ b/src/MusicPlayer/ButtonsBox.module.css
@@ -1,17 +1,26 @@
 .wrapper {
-    display: grid;
+
     grid-template-columns: repeat(5,auto);
-    place-items:  center;
-    margin: 10px ;
-    max-height: 125px;
-    min-height: 120px;
-    overflow-x: hidden;
-    padding-right: 0px;
+
+    /* max-height: 100px auto;
+    max-width: 100px auto; */
+    display: grid;
+
+  
   }
 
 
   @media only screen and (max-width: 800px) {
     .wrapper {
       grid-template-columns: repeat(3, auto);
+      padding: 10%;
+      transition: transform 0.2s;
+      border-radius: -20px;
+      padding: 10%;
+      
+      transition: transform 0.2s;
+      border-radius: -20px;
+    
     }
+
   }
