--- a/src/MusicPlayer/Volume.module.css
+++ b/src/MusicPlayer/Volume.module.css
@@ -1,23 +1,28 @@
 .wrapper {
    
-    place-items: center;
-    text-align: right;
-    min-height: 60px;
+    place-items: right ;
+    margin-left: -250px ;
+    margin-top: 30px; 
   }
   
   .slider {
     -webkit-appearance: none;
-    width: 30%;
-    height: 2px;
-    border-radius: 2px;
+   
+    width: 100% ;
+    height: 3%;
+    margin-top: 100px;
+    margin-left: 10px ;
     background: var(--volumeSlider);
+    
   }
   
   .slider::-webkit-slider-thumb {
     -webkit-appearance: none;
-    width: 20px;
+    width: 20px
+;
     height: 20px;
-    border-radius: 70%;
+    border-radius: 50%;
+    margin-left: 10px ;
     background: var(--volumeSlider);
     cursor: pointer;
   }
