--- a/src/MusicPlayer/ButtonsBox.module.css
+++ b/src/MusicPlayer/ButtonsBox.module.css
@@ -12,11 +12,12 @@
 
   @media only screen and (max-width: 800px) {
     .wrapper {
-      grid-template-columns: repeat(3, auto);
-      padding: 10%;
+      /* grid-template-columns: repeat(3, auto); */
+      padding: -50%;
       transition: transform 0.2s;
       border-radius: -20px;
-      padding: 10%;
+      padding: -50%;
+      margin-left: -250px;
       
       transition: transform 0.2s;
       border-radius: -20px;
